--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   },
   "name": "blooddark.github.io",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@vuepress/plugin-blog": "^1.0.0-alpha.0"
+  }
 }
